Fix CronJob api version

--- a/pangolin/pangolin-cronjob.yaml
+++ b/pangolin/pangolin-cronjob.yaml
@@ -3,24 +3,22 @@ kind: CronJob
 metadata:
   name: pangolin-cronjob
 spec:
-  schedule: "* 0 * * *"
+  schedule: "@midnight"
   jobTemplate:
     metadata:
       labels:
         ms: pangolin-cronjob
     spec:
-      restartPolicy: OnFailure
-      containers:
-        - name: main
-          image: rmwthorne/pangolin-cronjob
-          volumeMounts:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+            - name: main
+              image: rmwthorne/pangolin-cronjob
+              volumeMounts:
+                - name: data
+                  mountPath: /data
+          volumes:
             - name: data
-              mountPath: /data
-            - name: output
-              mountPath: /output
-            - name: temp
-              mountPath: /temp
-      volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: pangolin-pvc
+              persistentVolumeClaim:
+                claimName: pangolin-pvc
