--- a/artic-ont-inputdata/artic-ont-inputdata-cronjob.yaml
+++ b/artic-ont-inputdata/artic-ont-inputdata-cronjob.yaml
@@ -12,7 +12,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: main
-          image: ctr26/artic-ont-inputdata-cronjob
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/artic-ont-inputdata-cronjob
           env:
             - name: DATA_HUB
               valueFrom:
@@ -29,6 +29,8 @@ spec:
               mountPath: /data
             - name: wms
               mountPath: /wms
+      imagePullSecrets:
+        - name: ebi-registry-secret
       volumes:
         - name: data
           persistentVolumeClaim:
