--- a/jovian-databases/cronjob/jovian-databases-cronjob.yaml
+++ b/jovian-databases/cronjob/jovian-databases-cronjob.yaml
@@ -10,14 +10,16 @@ spec:
         ms: jovian-databases-cronjob
     spec:
       restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - name: main
-        image: alexeyebi/jovian-databases-cronjob
-        volumeMounts:
-          - name: data
-            mountPath: /mnt/database
-          - name: code
-            mountPath: /git
+        - name: main
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/jovian-databases-cronjob
+          volumeMounts:
+            - name: data
+              mountPath: /mnt/database
+            - name: code
+              mountPath: /git
       volumes:
         - name: data
           persistentVolumeClaim:
