--- a/jovian-databases/job/jovian-databases-job.yaml
+++ b/jovian-databases/job/jovian-databases-job.yaml
@@ -9,14 +9,16 @@ spec:
         ms: jovian-databases-job
     spec:
       restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - name: main
-        image: alexeyebi/jovian-databases-job
-        volumeMounts:
-          - name: data
-            mountPath: /database
-          - name: code
-            mountPath: /git
+        - name: main
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/jovian-databases-job
+          volumeMounts:
+            - name: data
+              mountPath: /database
+            - name: code
+              mountPath: /git
       volumes:
         - name: data
           persistentVolumeClaim:
