--- a/artic-pipeline/artic-illumina-pipeline-run-job.yaml
+++ b/artic-pipeline/artic-illumina-pipeline-run-job.yaml
@@ -9,9 +9,11 @@ spec:
         ms: artic-illumina-pipeline-run-job
     spec:
       restartPolicy: Never
+      imagePullSecrets:
+        - ebi-registry-secret
       containers:
-        - image: ctr26/artic-pipeline-run-job
-          name: artic-illumina-pipeline-run-pod
+        - name: artic-illumina-pipeline-run-pod
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/artic-pipeline-run-job
           args: ["ERR4164785", "illumina"]
           env:
             - name: USER
