--- a/jovian-inputdata/jovian-inputdata-pvc+cronjob.yaml
+++ b/jovian-inputdata/jovian-inputdata-pvc+cronjob.yaml
@@ -24,25 +24,27 @@ spec:
         ms: jovian-inputdata-cronjob
     spec:
       restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - name: main
-        image: alexeyebi/jovian-inputdata-cronjob
-        env:
-          - name: DATA_HUB
-            valueFrom:
-              configMapKeyRef:
-                name: jovian-inputdata-config
-                key: data-hub
-          - name: DATA_HUB_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: jovian-inputdata-config
-                key: data-hub-password
-        volumeMounts:
-          - name: data
-            mountPath: /raw_data
-          - name: wms
-            mountPath: /wms
+        - name: main
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/jovian-inputdata-cronjob
+          env:
+            - name: DATA_HUB
+              valueFrom:
+                configMapKeyRef:
+                  name: jovian-inputdata-config
+                  key: data-hub
+            - name: DATA_HUB_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: jovian-inputdata-config
+                  key: data-hub-password
+          volumeMounts:
+            - name: data
+              mountPath: /raw_data
+            - name: wms
+              mountPath: /wms
       volumes:
         - name: data
           persistentVolumeClaim:
