--- a/jovian-pipeline/installation-job/jovian-pipeline-installation-job.yaml
+++ b/jovian-pipeline/installation-job/jovian-pipeline-installation-job.yaml
@@ -9,9 +9,11 @@ spec:
         ms: jovian-pipeline-installation-job
     spec:
       restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
       - name: main
-        image: alexeyebi/jovian-pipeline-installation-job
+        image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/jovian-pipeline-installation-job
         volumeMounts:
           - name: sourcecode
             mountPath: /git
