--- a/jovian-pipeline/run_pipeline-job/jovian-pipeline-run-job.yaml
+++ b/jovian-pipeline/run_pipeline-job/jovian-pipeline-run-job.yaml
@@ -9,28 +9,30 @@ spec:
         ms: jovian-pipeline-run-job
     spec:
       restartPolicy: Never
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - name: main
-        image: alexeyebi/jovian-pipeline-run-job
-        args: ["jovian-pipeline-run-job"]
-        resources:
-          limits:
-            cpu: "19"
-            memory: "90Gi"
-          requests:
-            cpu: "19"
-            memory: "90Gi"
-        volumeMounts:
-          - name: sourcecode
-            mountPath: /git
-          - name: databases
-            mountPath: /mnt/database
-          - name: data
-            mountPath: /raw_data
-          - name: results
-            mountPath: /output
-          - name: wms
-            mountPath: /wms
+        - name: main
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/jovian-pipeline-run-job
+          args: ["jovian-pipeline-run-job"]
+          resources:
+            limits:
+              cpu: "19"
+              memory: "90Gi"
+            requests:
+              cpu: "19"
+              memory: "90Gi"
+          volumeMounts:
+            - name: sourcecode
+              mountPath: /git
+            - name: databases
+              mountPath: /mnt/database
+            - name: data
+              mountPath: /raw_data
+            - name: results
+              mountPath: /output
+            - name: wms
+              mountPath: /wms
       volumes:
         - name: sourcecode
           persistentVolumeClaim:
