--- a/ont-inputdata/ont-inputdata-cronjob.yaml
+++ b/ont-inputdata/ont-inputdata-cronjob.yaml
@@ -10,25 +10,27 @@ spec:
         ms: ont-inputdata-cronjob
     spec:
       restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - name: main
-        image: alexeyebi/ont-inputdata-cronjob
-        env:
-          - name: DATA_HUB
-            valueFrom:
-              configMapKeyRef:
-                name: ont-inputdata-config
-                key: data-hub
-          - name: DATA_HUB_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: ont-inputdata-config
-                key: data-hub-password
-        volumeMounts:
-          - name: data
-            mountPath: /data
-          - name: wms
-            mountPath: /wms
+        - name: main
+          image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/ont-inputdata-cronjob
+          env:
+            - name: DATA_HUB
+              valueFrom:
+                configMapKeyRef:
+                  name: ont-inputdata-config
+                  key: data-hub
+            - name: DATA_HUB_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: ont-inputdata-config
+                  key: data-hub-password
+          volumeMounts:
+            - name: data
+              mountPath: /data
+            - name: wms
+              mountPath: /wms
       volumes:
         - name: data
           persistentVolumeClaim:
