--- a/ont-pipeline/ont-pipeline-run-job.yaml
+++ b/ont-pipeline/ont-pipeline-run-job.yaml
@@ -9,26 +9,28 @@ spec:
         ms: ont-pipeline-run-job
     spec:
       restartPolicy: Never
+      imagePullSecrets:
+        - name: ebi-registry-secret
       containers:
-      - image: alexeyebi/ont-pipeline-run-job
-        name: ont-pipeline-run-pod
-        args: ["ERR4164785"]
-        env:
-          - name: USER
-            valueFrom:
-              configMapKeyRef:
-                name: ont-pipeline-config
-                key: user
-          - name: PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: ont-pipeline-config
-                key: password
-        volumeMounts:
-          - name: data
-            mountPath: /data
-          - name: sourcecode
-            mountPath: /git
+        - image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/ont-pipeline-run-job
+          name: ont-pipeline-run-pod
+          args: ["ERR4164785"]
+          env:
+            - name: USER
+              valueFrom:
+                configMapKeyRef:
+                  name: ont-pipeline-config
+                  key: user
+            - name: PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: ont-pipeline-config
+                  key: password
+          volumeMounts:
+            - name: data
+              mountPath: /data
+            - name: sourcecode
+              mountPath: /git
       volumes:
         - name: data
           persistentVolumeClaim:
