--- a/samples-logs-back-end/cronjob/cronjob.yaml
+++ b/samples-logs-back-end/cronjob/cronjob.yaml
@@ -12,6 +12,8 @@ spec:
             ms: phylogeny-cronjob
         spec:
           restartPolicy: OnFailure
+          imagePullSecrets:
+            - name: ebi-registry-secret
           containers:
             - name: main
-              image: alexeyebi/phylogeny-cronjob
+              image: dockerhub.ebi.ac.uk/c19workflow/covid-workflow-manager/samples-logs-back-end-cronjob
