Update installation job for Jovian updates

--- a/jovian-pipeline/installation-job/jovian-pipeline-installation-job.yaml
+++ b/jovian-pipeline/installation-job/jovian-pipeline-installation-job.yaml
@@ -10,13 +10,13 @@ spec:
     spec:
       restartPolicy: OnFailure
       containers:
-      - name: main
-        image: alexeyebi/jovian-pipeline-installation-job
-        volumeMounts:
-          - name: sourcecode
-            mountPath: /git
-          - name: databases
-            mountPath: /mnt/database
+        - name: main
+          image: rmwthorne/jovian-pipeline-installation-job
+          volumeMounts:
+            - name: sourcecode
+              mountPath: /git
+            - name: databases
+              mountPath: /databases
       volumes:
         - name: sourcecode
           persistentVolumeClaim:
