--- a/pangolin/pangolin-cronjob.yaml
+++ b/pangolin/pangolin-cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: pangolin-cronjob
 spec:
-  schedule: "0 0 * * 1" # At 00:00 on Monday
+  schedule: "37 9 * * *"
   jobTemplate:
     metadata:
       labels:
@@ -15,6 +15,9 @@ spec:
           containers:
             - name: main
               image: rmwthorne/pangolin-cronjob
+              env:
+                - name: SOURCE
+                  value: rest # 'rest' or 'ftp'
               volumeMounts:
                 - name: data
                   mountPath: /data
