Fix cronjob for phylogeny and lineage API

--- a/samples-logs-back-end/cronjob/Dockerfile
+++ b/samples-logs-back-end/cronjob/Dockerfile
@@ -1,4 +1,7 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.7
-RUN pip install pymongo flask-cors
-COPY ./sync.py /sync.py
-ENTRYPOINT ["python", "sync.py"]
+FROM python:3.9
+WORKDIR /opt/app
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+COPY sync.py .
+
+CMD ["python", "sync.py"]
