--- a/samples-logs-back-end/cronjob/cronjob.yaml
+++ b/samples-logs-back-end/cronjob/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: phylogeny-cronjob
 spec:
-  schedule: "0 * * * *"
+  schedule: "@daily"
   jobTemplate:
     spec:
       template:
