--- a/nextstrain/nextstrain-pvc.yaml
+++ b/nextstrain/nextstrain-pvc.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nextstrain-data-pvc
+  namespace: nextstrain
 spec:
   resources:
     requests:
       storage: 50Gi
+  storageClassName: example-nfs
   accessModes:
   - ReadWriteMany
 
