Pin image versions

--- a/nextstrain/augur/augur-deploy.yaml
+++ b/nextstrain/augur/augur-deploy.yaml
@@ -19,5 +19,5 @@ spec:
       containers:
         - name: augur
           command: ['augur', 'parse', '-h']
-          image: staphb/augur
+          image: staphb/augur:9.0.0
           resources: {}
