--- a/vcf-pipeline/Dockerfile
+++ b/vcf-pipeline/Dockerfile
@@ -1,9 +1,8 @@
-FROM openjdk:slim
+FROM openjdk:8u282-jdk-slim
 COPY --from=python / /
 RUN wget -qO- https://get.nextflow.io | bash
-RUN pip install pymongo redis
+RUN pip install pymongo redis pysam
 COPY ./worker.py /worker.py
 COPY ./rediswq.py /rediswq.py
-COPY ./workflow.nf /workflow.nf
-COPY ./nextflow.config /nextflow.config
 ENTRYPOINT ["python", "worker.py"]
+#ENTRYPOINT ["sleep", "9999999999"]
