--- a/vcf-pipeline/nextflow.config
+++ b/vcf-pipeline/nextflow.config
@@ -3,7 +3,7 @@ process {
 }
 
 k8s {
-   storageClaimName = 'jovian-inputdata-pvc'
+   storageClaimName = 'data'
    storageMountPath = '/data'
    pod = [[runAsUser: 0], [imagePullSecret: 'regcred']]
 }
