--- a/metadata-inputdata/cronjob.yaml
+++ b/metadata-inputdata/cronjob.yaml
@@ -16,6 +16,13 @@ spec:
             - name: main
               image: rmwthorne/metadata-inputdata
               command: ["python3", "get_seq_metadata.py", "-o", "/metadata/metadata.tsv"]
+              resources:
+                requests:
+                  cpu: "1"
+                  memory: "512Mi"
+                limits:
+                  cpu: "4"
+                  memory: "10Gi"
               env:
                 - name: PYTHONUNBUFFERED
                   value: "1"
