--- a/pangolin/store_results/store-results-cronjob.yaml
+++ b/pangolin/store_results/store-results-cronjob.yaml
@@ -21,6 +21,13 @@ spec:
                 "/consensus/lineages.csv",
                 "--uri", "mongodb://samples-logs-db-svc",
               ]
+              resources:
+                requests:
+                  cpu: "1"
+                  memory: "512Mi"
+                limits:
+                  cpu: "4"
+                  memory: "10Gi"
               env:
                 - name: PYTHONUNBUFFERED
                   value: "1"
