--- a/.github/workflows/arctic-illumin-inputdata_test.yaml
+++ b/.github/workflows/arctic-illumin-inputdata_test.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
 
       - name: push-docker-gcr
         uses: raccoondev/push-docker-gcr
