--- a/.github/workflows/arctic-illumin-inputdata_test.yaml
+++ b/.github/workflows/arctic-illumin-inputdata_test.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v1
 
-      - name: push-docker-gcr
+      - name: push-docker-gcr@v1
         uses: raccoondev/push-docker-gcr
         with:
           gcr_host: gcrp.io
