Test run gh action 2

--- a/.github/workflows/arctic-illumina-inputdata_test.yaml
+++ b/.github/workflows/arctic-illumina-inputdata_test.yaml
@@ -2,7 +2,8 @@ name: artic-illumina-inputdata push
 
 on:
   push:
-    branches: [ move-registry ]
+    branches: 
+      - move-registry
     # paths:
     #   - "artic-illumina-inputdata/**"
 
