--- a/.github/workflows/arctic-illumina-inputdata_test.yaml
+++ b/.github/workflows/arctic-illumina-inputdata_test.yaml
@@ -17,8 +17,8 @@ jobs:
       - name: push-docker-gcr
         uses: raccoondev/push-docker-gcr@v1
         with:
-          gcr_host: gcrp.io
-          image_name: artic-illumina-inputdata
+          gcr_host: ${{ secrets.GCLOUD_HOST }}
+          image_name: covid-workflow-manager/artic-illumina-inputdata
           image_tag: latest
         env:
           GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
