--- a/.github/workflows/arctic-illumina-inputdata_test.yaml
+++ b/.github/workflows/arctic-illumina-inputdata_test.yaml
@@ -15,15 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: build & push image
-        uses: raccoondev/push-docker-gcr@v1
+        uses: kurkop/push-docker-gcr@v1
         with:
           gcr_host: docker.pkg.dev
           image_name: covid-workflow-manager/artic-illumina-inputdata
           image_tag: latest
+          docker_context: artic-illumina-inputdata/
         env:
           GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
           GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
-    defaults:
-      run:
-        working-directory: artic-illumina-inputdata/
 
