--- a/.github/workflows/artic-illumina-inputdata_test.yaml
+++ b/.github/workflows/artic-illumina-inputdata_test.yaml
@@ -20,6 +20,8 @@ jobs:
           service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
           project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
           export_default_credentials: true
+
+      - name: configure credentials
         run: |
           gcloud auth configure-docker -q
 
