--- a/.github/workflows/artic-illumina-inputdata_test.yaml
+++ b/.github/workflows/artic-illumina-inputdata_test.yaml
@@ -10,16 +10,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
+      - id: auth
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrests.GCLOUD_SERVICE_KEY }}
+
+      - name: setup gcloud sdk
+        uses: google-github-actions/setup-gcloud@v0
+
       - name: checkout
         uses: actions/checkout@v2
-
-      - name: setup gcp
-        uses: google-github-actions/setup-gcloud@v0.3.0
-        with:
-          service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
-          project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
-          export_default_credentials: true
 
       - name: configure credentials
         run: |
