--- a/nextstrain/preprocess_cronjob/requirements.txt
+++ b/nextstrain/preprocess_cronjob/requirements.txt
@@ -1,32 +1,22 @@
-astroid==2.5.6
 attrs==21.2.0
-certifi==2020.12.5
-chardet==4.0.0
-coverage==5.5
-idna==2.10
+coverage==6.1.2
+docopt==0.6.2
 iniconfig==1.1.1
-isort==5.8.0
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-numpy==1.20.3
-packaging==20.9
-pandas==1.2.4
-pluggy==0.13.1
+numpy==1.21.4
+packaging==21.2
+pandas==1.3.4
+pluggy==1.0.0
 pprintpp==0.4.0
-py==1.10.0
+py==1.11.0
 pycountry==20.7.3
 pycountry-convert==0.7.2
-pyfasta==0.5.2
-pylint==2.8.2
 pyparsing==2.4.7
-pytest==6.2.4
-pytest-cov==2.11.1
+pytest==6.2.5
+pytest-cov==3.0.0
 pytest-mock==3.6.1
-python-dateutil==2.8.1
-pytz==2021.1
+python-dateutil==2.8.2
+pytz==2021.3
 repoze.lru==0.7
-requests==2.25.1
 six==1.16.0
 toml==0.10.2
-urllib3==1.26.4
-wrapt==1.12.1
+tomli==1.2.2
