DCP-3094: Fix erroneous extra paranthesis, fix type error on Operation model and change docker image to reflect these changes

--- a/kooplex-proxy/kooplex_svc+deployment.yml
+++ b/kooplex-proxy/kooplex_svc+deployment.yml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: proxy
-        image: milm/kooplex-proxy:latest
+        image: sands0/kooplex-proxy:3
         ports:
           - containerPort: 8080
         env:
