setting of the views

--- a/kooplex-proxy/kooplex_svc+deployment.yml
+++ b/kooplex-proxy/kooplex_svc+deployment.yml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: proxy
-        image: milm/kooplex-proxy:latest
+        image: milm/kooplex-proxy:test13
         ports:
           - containerPort: 8080
         env:
