POSTGRES_SCHEMA environment variable adding

--- a/kooplex-proxy/kooplex_svc+deployment.yml
+++ b/kooplex-proxy/kooplex_svc+deployment.yml
@@ -56,3 +56,8 @@ spec:
               secretKeyRef:
                 name: dbprod
                 key: dbport
+          - name: POSTGRES_SCHEMA
+            valueFrom:
+              secretKeyRef:
+                name: dbprod
+                key: dbschema
